fix: Corrected CSS error and line spacing

--- a/css/project2.css
+++ b/css/project2.css
@@ -100,6 +100,7 @@ body, html {
         transform: scale(1.1);
         transition: visibility 0s linear 0.25s, opacity 0.25s 0s, transform 0.25s;
     }
+
     .modal-content {
         position: absolute;
         top: 50%;
@@ -110,6 +111,7 @@ body, html {
         width: 24rem;
         border-radius: 0.5rem;
     }
+
     .close-button {
         float: right;
         width: 1.5rem;
@@ -119,9 +121,11 @@ body, html {
         border-radius: 0.25rem;
         background-color: lightgray;
     }
+
     .close-button:hover {
         background-color: darkgray;
     }
+
     .show-modal {
         opacity: 1;
         visibility: visible;
@@ -132,7 +136,6 @@ body, html {
     .play-again {
         color: red;
         flex-direction: column;
-        position: center;
         font-weight: bolder;
         font-size: 200%;
     }
